Refactor complet STUSB4500 : I2CDevice, NVM, sync auto, config par défaut

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
 idf_component_register(
-    SRC_DIRS "src" "interface"
-    INCLUDE_DIRS "src" "interface"
-    REQUIRES driver log_manager
+    SRCS 
+        "src/stusb4500_core.cpp"
+        "src/stusb4500_pdo.cpp"
+        "src/stusb4500_nvm.cpp"
+        "src/stusb4500_config.cpp"
+        "src/stusb4500_accessors.cpp"
+        "src/stusb4500_sync.cpp"
+    INCLUDE_DIRS "include"
+    REQUIRES driver I2CDevice
 ) 
